--- a/contact.html
+++ b/contact.html
@@ -80,29 +80,29 @@
 			<div class="col-sm-6">
 				<form id="form_1" novalidate>
 					<div class="form-group">
-						<label>
+						<label for="name">
 							Nom
 						</label>
-						<input id="name" class="form-control" placeholder="Votre nom" required />
+						<input id="name" name="name" class="form-control" placeholder="Votre nom" required aria-label="Votre nom"/>
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="email">
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" placeholder="Votre email" required />
+						<input id="email" name="email" class="form-control" type="email" placeholder="Votre email" required aria-label="Votre email"/>
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="renseignement">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="text" placeholder="Par qui ?" required id="input_504" />
+						<input id="renseignement" name="renseignement" class="form-control" type="text" placeholder="Par qui ?" required id="input_504" aria-label="par qui ?"/>
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" placeholder="Votre message" class="form-control" rows="4" cols="50" required></textarea>
+						</label><textarea id="message" name="message" placeholder="Votre message" class="form-control" rows="4" cols="50" required aria-label="Votre message"></textarea>
 					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="Envoyer">
 						Envoyer
 					</button>
 				</form>
